--- a/src/fragments/Featured/projects.json
+++ b/src/fragments/Featured/projects.json
@@ -1,5 +1,20 @@
 [
     {
+        "title": "reflecty.app",
+        "description_fr": "Reflecty est une plateforme Web qui permet aux étudiants de rédiger des fiches de révision structurées, de les trier et de les apprendre efficacement.",
+        "description_en": "Reflecty is a web platform that allows students to write structured sheets, sort them, and learn them effectively.",
+        "url": "https://reflecty.app",
+        "technologies": [
+            "JavaScript", 
+            "react", 
+            "sass", 
+            "webpack",
+            "go",
+            "mongodb"
+        ],
+        "screenshot_name": "reflecty.app.png"
+    },
+    {
         "title": "constanceoules.com",
         "description_fr": "Agence d'architecture intérieure basée à Paris. Rénovation, décoration, et design de mobilier.",
         "description_en": "Interior architecture agency based in Paris. Renovation, decoration, and furniture design.",
