--- a/src/fragments/Featured/projects.json
+++ b/src/fragments/Featured/projects.json
@@ -1,5 +1,21 @@
 [
     {
+        "title": "backpulse.io",
+        "description_fr": "Backpulse est un service qui vous permet de construire votre propre site web sans avoir à vous soucier du système d'administration du contenu. Votre contenu est ensuite accessible par notre API non réstreinte.",
+        "description_en": "Backpulse is a service that lets you build your own website without have to care about the content administration system. Your content is served by an unrestricted API access.",
+        "url": "https://www.backpulse.io",
+        "technologies": [
+            "JavaScript", 
+            "react", 
+            "sass", 
+            "webpack",
+            "go",
+            "mongodb",
+            "heroku"
+        ],
+        "screenshot_name": "backpulse.io.png"
+    },
+    {
         "title": "reflecty.app",
         "description_fr": "Reflecty est une plateforme Web qui permet aux étudiants de rédiger des fiches de révision structurées, de les trier et de les apprendre efficacement.",
         "description_en": "Reflecty is a web platform that allows students to write structured sheets, sort them, and learn them effectively.",
